fix: ensure changing zoom level doesn't cause parts of elements to be cut off
- Removed unnecessary overflow:hidden on AuroElement in style.scss

--- a/components/layoutElement/src/styles/shapeSize.scss
+++ b/components/layoutElement/src/styles/shapeSize.scss
@@ -54,10 +54,6 @@ $xs: 24px;
   @include parentBorder($size);
 }
 
-.wrapper {
-  overflow: hidden;
-}
-
 .shape-classic-xl,
 .shape-classic-lg,
 .shape-classic-md,
